--- a/website/home.html
+++ b/website/home.html
@@ -56,13 +56,12 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
 			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
 			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts</a>
-			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook <img src="!g/pix/new1.gif"></a>
+			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> gaming log</a>
 			<a title="everything about the music i love is here!" href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
-			<a title="this month's listening log" href="/music/listening-log/2023/12.html"><img src="/!g/pix/cat-music.gif" alt=""> listening log</a>
 
 			<h3>misc</h3>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
@@ -121,15 +120,16 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<p><span class="hl">playing:</span> <a href="/vgs/fashion-dreamer/">fashion dreamer</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto</p>
-			<p><span class="hl">watching:</span> kaiba (AGAIN)</p>
+<!--			<p><span class="hl">watching:</span>-</p>-->
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> i'm still cleaning my apartment ( ˘︹˘ )</p>
-			<p><span class="hl">coding/writing:</span> journal log soon... <img src="/!g/pix/emote1cov.gif" alt=""></p>
-			<p class="date">last updated on 02.feb.24</p>
+			<p><span class="hl">working on:</span> my apartment ( ˘︹˘ ), studying, everything</p>
+			<p><span class="hl">coding/writing:</span> nothing atm!</p>
+			<p class="date">last updated on 17.feb.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>17.feb.24 - new <a href="/journal">journal log</a>! also changed featured cat</li>
 			<li>25.jan.24 - updated and fixed <a href="/shrines/mizu/index.html">mizu shrine</a> code and added a little gallery at the end so i can keep adding mizu pics!</li>
 			<li>20.jan.24 - added new entry to <a href="/photobook/index.html">photobook</a> + <a href="/scrapbook/2024/index.html">scrapbook</a> + new featured page!</li>
 			<li>15.jan.24 - created <a href="/collection/cats">cat hoarding</a> page in collection!</li>
@@ -142,7 +142,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a href="/collection/cats/!g/whoops.jpeg" target="_blank"><img src="/collection/cats/!g/whoops.jpeg" width="90%" alt="featured cat"></a>
+			<a href="/collection/cats/!g/stupid-tiger.jpg" target="_blank"><img src="/collection/cats/!g/stupid-tiger.jpg" width="90%" alt="featured cat, its a stupid ass looking tiger"></a>
 		</div>
 
 		<div id="listing" class="box">
