--- a/website/index.html
+++ b/website/index.html
@@ -103,8 +103,8 @@
 
 	<main>
 		<p>hello there! you're about to enter <span id="rainbow">doqmeat.neocities.org</span> </p>
-
 		<p>this website uses <u>javascript</u> and <u>iframes</u>. on rare occasions there will be <u>autoplay audio</u>, and discussions of <u>heavy topics</u>. there will be warnings for the latter.</p>
+		<p>some pages can be <b>very</b> IMG heavy and might require you to reload more than once for everything to load.</p>
 		<p class="hide"><b>homepage is compatible with mobile devices but i cannot guarantee that for every page on my site, sorry!</b></p>
 		<p>this is a personal website made for my own enjoyment. with that said, have fun browsing!</p>
 		<p>contact me @ <a href="mailto:doqmeat@gmail.com">doqmeat@gmail.com</a></p>
