--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -301,6 +301,7 @@
 		<li><a href="https://www.deadlinkchecker.com/website-dead-link-checker.asp" target="_blank">deadlinkchecker</a> - check dead links on entire website or specific page!</li>
 		<li><a href="https://www.drlinkcheck.com" target="_blank">dr. link checker</a> - another dead link checker</li>
 		<li><a href="https://www.link-assistant.com/seo-spyglass/free-backlink-checker-tool.html" target="_blank">backlink checker</a></li>
+		<li>another <a href="https://ahrefs.com/backlink-checker/" target="_blank">backlink checker</a> but this one doesn't require you to have an acc to use it. YAY!</li>
 		<li><a href="http://calendar-muryou.com/" target="_blank">calendar-muryou</a> - site about making japanese calendars! it has lots of options</li>
 		<li><a href="https://www.y2mate.com" target="_blank">y2mate.com</a> - youtube MP4 or MP3 downloader</li>
 		<li><a href="https://www.deepl.com/translator" target="_blank">deepl.com</a> - most accurate translator you'll get. mostly use it for japanese</li>
