--- a/website/home.html
+++ b/website/home.html
@@ -120,11 +120,11 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<p><span class="hl">playing:</span> <a href="/vgs/fashion-dreamer/">fashion dreamer</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto</p>
-<!--			<p><span class="hl">watching:</span>-</p>-->
+			<span class="hl">watching:</span> the same 5 blu-rays i have over and over again</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> my apartment ( ˘︹˘ ), studying, everything</p>
-			<p><span class="hl">coding/writing:</span> nothing atm!</p>
-			<p class="date">last updated on 17.feb.24</p>
+			<p><span class="hl">working on:</span> my apartment ( ˘︹˘ ), studying</p>
+			<p><span class="hl">coding/writing:</span> journal 3.0 ver!</p>
+			<p class="date">last updated on 22.feb.24</p>
 		</div>
 
 		<div id="updates" class="box">
