updated button wall

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -180,6 +180,13 @@
 			<a title="telle - nice site with interesting logs!" href="https://catcakes.neocities.org/" target="_blank"><img src="!g/catcakes.gif" alt="catcakes"></a>
 			<a title="kirsten - very minimalistic and nice site!" href="https://10kph.neocities.org/" target="_blank"><img src="!g/10kph.png" alt="10kph"></a>
 			<a title="jasmine - lovely on the eyes and i love how responsive it is!" href="https://jasm1nii.xyz/" target="_blank" rel="external"><img src="!g/jasm1nii.png" alt="jasmine's journal" style="outline: 1px solid gray; image-rendering: pixelated;" width="88" height="31"></a>
+			<a href="https://irony-machine.neocities.org/" target="_blank"><img src="!g/irony-machine.png"></a>
+			<a title="layfarts" href="https://layfarts.com" target="_blank"><img src="!g/layfarts.gif" alt="layfarts"></a>
+			<a title="sylum" href="https://sylum.web.fc2.com/" target="_blank"><img src="!g/sylum.gif" alt="sylum"></a>
+			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
+			<a title="audreywasadiver" href="https://audreywasadiver.neocities.org/" target="_blank"><img src="!g/audreywasadiver.gif" alt="audreywasadriver"></a>
+			<a href="myblace" href="https://myblace.one" target="_blank"><img src="!g/myblace.gif" alt="myblace"></a>
+			<a href="https://alphacentauri.neocities.org/" title="alphacentauri" target="_blank"><img src="!g/alphacentauri.gif" alt="alphacentauri" </a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -235,7 +242,6 @@
 			<a href="https://middlepot.com" target="_blank"><img src="https://middlepot.com/button.png"></a>
 			<a href="https://yuviko.neocities.org" target="_blank"><img src="!g/yuviko.gif"></a>
 			<a href="https://thehoneypot.neocities.org/" target="_blank"><img src="!g/thehoneypot.png"></a>
-			<a href="https://irony-machine.neocities.org/" target="_blank"><img src="!g/irony-machine.png"></a>
 			<a href="https://dxcccii.neocities.org" target="_blank"><img src="https://dxcccii.neocities.org/follow_dxcccii_2.gif"></a>
 			<a title="features interesting articles and web dev resources!!! i feel like i could be here for hours and hours" href="https://neonaut.neocities.org" target="_blank"><img src="!g/neonaut.png"></a>
 			<a href="https://koinuko.neocities.org" target="_blank"><img src="!g/koinuko.gif"></a>
@@ -247,7 +253,7 @@
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
 			<a href="https://shrimpfriedeggs.neocities.org/"><img src="https://shrimpfriedeggs.neocities.org/art/mybutton.gif"></a>
 		</div>
-		<a href="https://mewmiu.blog.fc2.com"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
+		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
 
 		<p><a href="https://neustadt.fr/">neustadt.fr</a></p>
 
@@ -345,7 +351,6 @@
 			<a href="https://deathbycats.neocities.org/" target="_blank"><img src="!g/deathbycats.png"></a>
 			<a title="cora - cute site!! i love the cats around this site" href="https://realitv.neocities.org" target="_blank"><img src="!g/realitv.gif"></a>
 			<a title="nyatchi - such a cute layout" href="https://nyatchi.neocities.org" target="_blank"><img src="!g/nyatchi.gif"></a>
-			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
