--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -185,12 +185,12 @@
 			<a title="sylum" href="https://sylum.web.fc2.com/" target="_blank"><img src="!g/sylum.gif" alt="sylum"></a>
 			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
 			<a title="audreywasadiver" href="https://audreywasadiver.neocities.org/" target="_blank"><img src="!g/audreywasadiver.gif" alt="audreywasadriver"></a>
-			<a href="myblace" href="https://myblace.one" target="_blank"><img src="!g/myblace.gif" alt="myblace"></a>
-			<a href="https://alphacentauri.neocities.org/" title="alphacentauri" target="_blank"><img src="!g/alphacentauri.gif" alt="alphacentauri" </a>
+			<a title="myblace" href="https://myblace.one" target="_blank"><img src="!g/myblace.gif" alt="myblace"></a>
+			<a href="https://alphacentauri.neocities.org/" title="alphacentauri" target="_blank"><img src="!g/alphacentauri.gif" alt="alphacentauri"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
-		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> / <a href="https://vickee.neocities.org" target="_blank">vickee</a> / <a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a>
+		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> / <a href="https://vickee.neocities.org" target="_blank">vickee</a> / <a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a> / <a href="https://yaebee.neocities.org/" target="_blank">yaebee</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
