winter 2024 listening log created

--- a/website/music/listening-log/index.html
+++ b/website/music/listening-log/index.html
@@ -40,6 +40,7 @@
 		<p>sometimes i feel like writing my thoughts on stuff i listen to! these will usually be first time listens but i will mention if it isn't otherwise. <br> a more fleshed out version of my <a href="https://rateyourmusic.com/list/doqmeat/2023-📝🌟/" target="_blank">RYM yearly logs</a></p>
 		<p>these pages will open in the parent window!</p>
 		<h3>pages</h3>
+		<a href="2024/winter.html" target="_parent">winter 2024</a>
 		<a href="2023/12.html" target="_parent">december 2023</a>
 		<a href="2023/11.html" target="_parent">november 2023</a>
 		<a href="2023/10.html" target="_parent">october 2023</a>
@@ -52,6 +53,9 @@
 		<h4>all logs</h4>
 		<details>
 			<summary>if you're looking for a specific album or artist just hit that CTRL + F and search away :D</summary>
+			<p><a href="2023/12.html#3">yume no manimani</a> - weevildoing</p>
+			<p><a href="2023/12.html#2">delulu</a> - lexie liu</p>
+			<p><a href="2023/12.html#1">time-lapse</a> - yukika</p>
 			<p><a href="2023/11.html#5">sweet crazy love</a> - odd eye circle</p>
 			<p><a href="2023/11.html#4">bye-bye strobe</a> - erbatur</p>
 			<p><a href="2023/11.html#3">BADモード (bad mode)</a> - hikaru utada</p>
