new featured song and album

--- a/website/music/index.html
+++ b/website/music/index.html
@@ -29,9 +29,7 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
-				<b>06.jan.24</b> - added a RSS widget of my RYM account to this page!
-				/
-				<b>25.dec.23</b> - my <a href="recaps/2023/index.html">2023 recap</a> is out now! ヾ(≧ ▽ ≦)ゝ
+				<b>24.feb.24</b> - <a href="listening-log/2024/winter.html">winder 2024 listening log</a> created - new featured song &amp; album!
 			</marquee>
 		</div>
 
@@ -82,23 +80,21 @@
 
 		<div id="log" class="box">
 			<h4>latest log...</h4>
-			<iframe src="listening-log/2023/12.html" height="100%" width="100%" scrolling="no" name="listening-log"></iframe>
-			<a title="click to open listening log and continue reading!" href="listening-log/2023/12.html" target="_blank"></a>
+			<iframe src="listening-log/2024/winter.html" height="100%" width="100%" scrolling="no" name="listening-log"></iframe>
+			<a title="click to open listening log and continue reading!" href="listening-log/2024/winter.html" target="_blank"></a>
 		</div>
 
 		<div id="featured" class="box">
 			<h4>featured song &amp; album</h4>
 			<div class="song">
-				<b>spell (주문을 걸어)</b> by golden child
-				<iframe width="560" height="152" src="https://www.youtube-nocookie.com/embed/jMtoSkKhJCk?si=jKb8D8gl3vREuV9e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>i've been obsessed with this song for quite a bit and i just need to say that this is kpop perfection to me. i love a good ass song that makes me wanna get up and dance to it.</p>
-				<p><b>links:</b> <a href="https://open.spotify.com/track/5LCag4jeAzDPVgUtz02aVZ?si=b1cf4a0e15fd4697" target="_blank">spotify</a></p>
+				<b>aqua</b> by jo1
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/orrOpNjC0bc?si=ywUftuMjgd39pBba" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>this was love at first listen. this is technically jpop.... since they are a japanese pop boy group... but i also consider them to be a kpop group. anyway. I MISSED THIS future house sound soo much in kpop. it was super refreshing to hear this from my newly released tab! it's so good, first hit of the year.</p>
 			</div>
 			<div class="lp">
-				<b>コケガネのうた (kokegane no uta)</b> by 椎名もた (siinamota)
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=mKPRnF5TPKtCspPB&amp;list=OLAK5uy_lMJRDJtJjAx8DABdSfHCHnZzep9hDTxnw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>one of siinamota's best releases! this is so so charming. ranging from sweet songs to energetic ones, i think this EP has a great balance to it. my favorite song from here is <i>ましろの色 (mashiro no iro)</i></p>
-				<p><b>links:</b> <a href="https://open.spotify.com/album/5Cp38bMkCtYSx3xEEEIN6B?si=TlE5QKjiR5qj9isSGLq1og" target="_blank">spotify</a></p>
+				<b>dead girl dubstep EP</b> by erbatur999
+				<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3020021047/size=large/bgcol=ffffff/linkcol=e99708/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://futureisfailed.bandcamp.com/album/dead-girl-dubstep-ep">dead girl dubstep EP by erbatur999</a></iframe>
+				<p>a fun new EP from one of my favorite electronic artists filled with energetic remixes, most of them from siinamota!</p>
 			</div>
 			<hr>
 			<center>past featured music can be found <a href="featured.html">here</a>!</center>
