--- a/website/music/featured.html
+++ b/website/music/featured.html
@@ -66,7 +66,7 @@
 		<p>every once in a while i pick a song &amp; album to highlight on my page! take these as recommendations and just stuff i'm currently listening to :3</p>
 		<!-- contents 
 <details><summary>
-<span class="date">00.xxx.23 - ? : </span>
+<span class="date">00.xxx.24 - ? : </span>
 </summary>
 <table><td class="t-left">
 iframe1
@@ -77,7 +77,23 @@ iframe2
 -->
 		<details open>
 			<summary>
-				<span class="date">01.dec.23 - ? : spell / kokegane no uta</span>
+				<span class="date">24.feb.24 - ? : aqua / dead girl dubstep EP</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/orrOpNjC0bc?si=ywUftuMjgd39pBba" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<p>this was love at first listen. this is technically jpop.... since they are a japanese pop boy group... but i also consider them to be a kpop group. anyway. I MISSED THIS future house sound soo much in kpop. it was super refreshing to hear this from my newly released tab! it's so good, first hit of the year.</p>
+				</td>
+				<td class="t-right">
+					<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3020021047/size=large/bgcol=ffffff/linkcol=e99708/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://futureisfailed.bandcamp.com/album/dead-girl-dubstep-ep">dead girl dubstep EP by erbatur999</a></iframe>
+					<p>a fun new EP from one of my favorite electronic artists filled with energetic remixes, most of them from siinamota! </p>
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">01.dec.23 - 24.feb.24 : spell / kokegane no uta</span>
 			</summary>
 			<table>
 				<td class="t-left">
