--- a/website/music/cds.html
+++ b/website/music/cds.html
@@ -152,9 +152,10 @@
 						<h3>空​間​、​事​情​、​時​間​、​事​象​。(space, circumstances, time, and events.) - kinoue64</h3>
 						<p><span class="fav"></span></p>
 						<p>woke up at 7am to get this!!!!! super worth it</p>
+						<p><b>24.feb.24</b> update: THIS ALBUM GOT LOST IN THE MAIL......................................... well. a moment of silence please <img src="/!g/pix/sad.gif"></p>
 						<p><span class="placeholder"></span></p>
 						<p><span class="ver"> limited edition</span></p>
-						<p><span class="date"> 08.nov.23</span></p>
+						<p><span class="date"> <s>08.nov.23</s></span></p>
 					</div>
 				</div>
 			</div>
