--- a/website/home.html
+++ b/website/home.html
@@ -120,7 +120,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<p><span class="hl">playing:</span> <a href="/vgs/fashion-dreamer/">fashion dreamer</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto</p>
-			<span class="hl">watching:</span> the same 5 blu-rays i have over and over again</p>
+			<p><span class="hl">watching:</span> the same 5 blu-rays i have over and over again</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> my apartment ( ˘︹˘ ), studying</p>
 			<p><span class="hl">coding/writing:</span> journal 3.0 ver!</p>
@@ -129,6 +129,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>24.feb.24 - created <a href="/music/listening-log/2024/winter.html">winter 2024 listening log</a> + new featured song &amp; album</li>
 			<li>17.feb.24 - new <a href="/journal">journal log</a>! also changed featured cat</li>
 			<li>25.jan.24 - updated and fixed <a href="/shrines/mizu/index.html">mizu shrine</a> code and added a little gallery at the end so i can keep adding mizu pics!</li>
 			<li>20.jan.24 - added new entry to <a href="/photobook/index.html">photobook</a> + <a href="/scrapbook/2024/index.html">scrapbook</a> + new featured page!</li>
