--- a/website/notebook/F2U/codes.html
+++ b/website/notebook/F2U/codes.html
@@ -39,7 +39,7 @@
 		<h2>rules</h2>
 
 		<li>can be edited to your hearts content! go crazy even.
-		<li>can be used for any hosting site. examples: neocities, tumblr.</li>
+		<li>can be used for anything that accepts HTML</li>
 		<li><b>credit is not mandatory</b> but a link back to my <a href="https://doqmeat.neocities.org/" target="_blank">website</a> is very appreciated!</li>
 
 		<h2 id="notebook"><a title="click for preview and code!" href="preview/notebook.html" target="_blank">notebook</a></h2>
