--- a/website/home.html
+++ b/website/home.html
@@ -69,7 +69,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<a href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
 			<a href="webgarden/greenhouse.html"><img src="/!g/pix/home.gif" alt=""> webgarden</a>
 
-			<h3>site</h3>
+			<h3>sitely</h3>
 			<a href="/sites"><img src="/!g/pix/favcharas.gif"> button wall</a>
 			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"><img src="/!g/pix/notebook.gif"> notebook</a>
 			<a href="https://doqmeat.123guestbook.com/" class="outlink"><img src="/!g/pix/heart-paper.gif"> guestbook</a>
@@ -80,8 +80,9 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<h3>offsite</h3>
 			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/catheadswing.gif"> neocities
 				profile</a>
-			<a title="the site's repository!" href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github</a>
-			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> e-mail</a>
+			<a href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github repository</a>
+			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> contact e-mail</a>
+			<a href="https://doqmeat.github.io" class="outlink" target="_blank"><img src="/!g/pix/sticky.gif" alt=""> other projects</a>
 		</nav>
 
 		<div id="intro" class="box">
@@ -129,6 +130,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>25.feb.24 - added <a href="/scrapbook/2024/index.html#feb">february</a> to 2024 scrapbook</li>
 			<li>24.feb.24 - created <a href="/music/listening-log/2024/winter.html">winter 2024 listening log</a> + new featured song &amp; album</li>
 			<li>17.feb.24 - new <a href="/journal">journal log</a>! also changed featured cat</li>
 			<li>25.jan.24 - updated and fixed <a href="/shrines/mizu/index.html">mizu shrine</a> code and added a little gallery at the end so i can keep adding mizu pics!</li>
