updaded button wall

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -283,6 +283,7 @@
 			<a title="status cafe - a nicer twitter even" href="https://status.cafe" target="_blank"><img src="https://status.cafe/assets/button.png" alt="Status Cafe" /></a>
 			<a title="melonland.net forum" href="https://forum.melonland.net" target="_blank"><img src="!g/MELONLAND-FORUM.gif"></a>
 			<a title="32.bit cafe" href="https://www.32bit.cafe/" target="_blank"><img src="!g/32bit-cafe.png" alt="32.bit cafe"></a>
+			<a href="https://nekoweb.org/"><img src="https://nekoweb.org/assets/buttons/button4.gif" alt="nekoweb"></a>
 		</div>
 
 		<h4 id="resources">resources / graphics</h4>
