--- a/website/journal/old-v2.html
+++ b/website/journal/old-v2.html
@@ -4,9 +4,9 @@
 <head>
 
 	<!-- 
-coded with love by des!
-
-v3 of journal started on 25.feb.24.
+coded with love by des
+-----
+palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
  -->
 
 	<meta charset="UTF-8">
@@ -15,36 +15,50 @@ v3 of journal started on 25.feb.24.
 	<meta name="description" content="doqmeat's journal logs">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
+
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="v3-body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="v3-index.css" rel="stylesheet" type="text/css" media="all">
+	<link href="body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="/!f/tooltip-jquary.js"></script>
-	<script src="/!f/tooltip.js"></script>
+	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
+	<script>
+		(function($) {
+			$(document).ready(function() {
+				$("[title]").style_my_tooltips({
+					tip_follows_cursor: true,
+					tip_delay_time: 10,
+					tip_fade_speed: 10,
+					attribute: "title"
+				});
+			});
+		})(jQuery);
+
+	</script>
 	<!--  end of tooltip shit -->
+
 </head>
 
 <body>
+	<div id="maskimg">
+		<img class="mask" src="/!g/gif/kasio.gif" style="border-radius:20px;width:400px;" alt="">
+		<div class="tape"><img src="/!g/deco/washitape1.png" alt=""></div>
+		<div class="tape2"><img src="/!g/deco/washitape6.png" alt=""></div>
+	</div>
 
-	<div id="notepad">
-		<div id="header"></div>
 
-		<aside>
+	<div id="wrapper">
+		<div id="top"></div>
+		<div id="col1">
+
 			<h1>des' journal</h1>
-			<!--			<p>test. this is <b>bolded</b>. this is a <a href="/">link</a>. this is in <i>italics</i>. this is <mark>highlighted</mark>.</p>-->
 			<img src="/!g/deco/diary.gif">
-			<p>a place where i talk about what's going on in my life and about my site!</p>
-			<details>
-				<summary>notes</summary>
-				<p>i try to be as coherent as possible in these entries. for whatever nonsense i have atm, feel free to check out my <a href="" class="outlink">microblog</a></p>
-				<p>i <b>try</b> to not treat this journal as a vent dump, or be overly negative. but i do be having bad times. anything of those topics will have <mark>content warnings</mark> at the start of the entry.</p>
-			</details>
+			<br>
+			<span style="padding: 4px;">a place where i talk about what's going on in my life and about my site!</span>
 			<br>
 			<img src="/!g/deco/pencil1.gif">
 			<br>
 			<a href="credit.html" target="iframe_a">credit page</a>
-			<br>
 			<details open>
 				<summary>2024</summary>
 				<a href="2024/02.html" target="iframe_a">february</a>
@@ -62,17 +76,75 @@ v3 of journal started on 25.feb.24.
 				<a href="2023/05.html" target="iframe_a">may</a>
 				<a href="2023/04.html" target="iframe_a">april</a>
 			</details>
-		</aside>
 
-		<main>
+
+		</div>
+
+		<div id="col2">
 			<iframe src="2024/02.html" name="iframe_a" height="100%" width="100%" style="border:none;"></iframe>
-		</main>
+		</div>
+	</div>
+
+
+	<div id="wrapper2">
+
+		<div class="tab">
+			<button class="tablinks" onclick="openTab(event, 'fc2')">microblog</button>
+			<button class="tablinks" onclick="openTab(event, 'status')" id="defaultOpen">statuses</button>
+
+		</div>
+
+		<div id="status" class="tabcontent">
+			<!-- start sw-rss-feed code -->
+			<script type="text/javascript" src="status-cafe-feed.js"></script>
+			<script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
+			<span style="font-size:small;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></span>
+		</div>
+
+		<div id="fc2" class="tabcontent">
+			<details class="desc2">
+				<summary>
+					~(=^‥^)ノ FC2 microblog
+				</summary>
+				in an attempt to leave tw*tter behind. here goes short ramblings that are too long for status.cafe without filling up my site's journal with nonsense.
+			</details>
+			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.blog.fc2.com%2F%3Fxml&showtitle=false&type=js"></script>
+		</div>
+
+		<iframe src="https://free.timeanddate.com/clock/i8tprgzv/n226/fn3/tct/pct/tt0/tw1/tm1/td1/th2/ta1/tb4" class="time" allowtransparency="true"></iframe>
+
+		<div class="calendarimg"><a class="img" href="https://wadouraku.co.jp/SHOP/90-976.html" target="_blank"><img src="/journal/december-calendar.png" title="art from Yumiko Kobayashi cat postcards!" width="100%" alt="Yumiko Kobayashi cat postcard, link to source"></a></div>
+		<iframe src="https://calendar.sakura.ne.jp/blog_cal.html" class="calendar"></iframe>
+
+		<div class="sticker" style="top: 40%;left: 100%;">
+			<img src="/!g/deco/notebook1e.gif" alt="">
+		</div>
+
+		<div class="sticker" style="top:-1.5%;left: 10%;">
+			<img src="/!g/deco/pencilbag2b.gif" alt="">
+		</div>
+
+		<div class="sticker" style="top: 95%;left: 90%;">
+			<img src="/!g/deco/note3.gif" alt="">
+		</div>
+
+		<div class="sticker" style="	top: 47%;left: 12%;rotate: -40deg;">
+			<img src="/!g/deco/pencil2.gif" alt="">
+		</div>
+
+		<div class="sticker" style="top:2%;left:100%;"><img src="/!g/deco/pin.png" alt=""></div>
+
+		<br><span class="credit">pixels by <a href="http://whimsical.heartette.net" target="_blank">whimsical</a></span>
+
+		<!-- 		wrapper 2 end div -->
 	</div>
 
 	<div id="tag">
 		<a data-toggle="tooltip" title="go back home" href="/home">home</a>
 		<img src="/!g/pix/lc01-icon-bookmark.gif" width="23px">
 	</div>
+
+
 
 	<div id="musicbox">
 		<img src="/!g/deco/catmoon.gif" style="position:absolute;top:10px;left:-50px;">
