--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -10,20 +10,8 @@
 	<link href="link.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 20,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 	<style>
 		.button {
@@ -113,13 +101,23 @@
 		<li><a href="https://desktop.github.com/" target="_blank">github desktop</a> - program used to update my website's code directly from my PC without having to open neocities built-in coder using <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities</a>. this is such a time-saver and i really recommend it to everyone who updates their site a lot.</li>
 
 		<h3 id="coding-help">HTML, CSS, and JS tutorials</h3>
-		<li><a href="https://www.w3schools.com" target="_blank">w3schools</a> - besties lets learn how to code! (holy grail)</li>
-		<li><a href="https://developer.mozilla.org/en-US/" target="_blank">developer.mozilla.org</a> - coding tutorials for html, css, etc. (holy grail pt 2)</li>
+		<p>linking stuff that has helped me on my web coding journey! do remember that <b>practice</b> is key!</p>
+		<h4>beginner stuff (HTML and CSS focused)</h4>
+		<li><a href="https://www.w3schools.com" target="_blank">w3schools</a> - super beginner friendly that shows you the basics of webpages with demos.</li>
+		<li><a href="https://developer.mozilla.org/en-US/" target="_blank">developer.mozilla.org</a> - info and references for things used in HTML, CSS, and JS. if you don't know what something does, go here and find out!!</li>
+		<li><a href="https://www.htmldog.com/" target="_blank">htmldog</a> - simple and straight forward tutorials and info for HTML, CSS, and JS. they have tutorials for beginners as well as more advanced ones!</li>
 		<li><a href="https://internetingishard.netlify.app/" target="_blank">interneting is hard</a> - beginner friendly web dev tutorials!</li>
 		<li><a href="https://solarpunk.cool/zines/web-zine-01/table-of-contents.html" target="_blank">web zine 01</a> - zine about making a website from scratch!</li>
-		<li><a href="https://javascript.info/" target="_blank">javascript.info</a> - JS tutorials</li>
-		<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" target="_blank">javascriptkit</a> - JS resources and codes</li>
+
+		<h4>CSS</h4>
 		<li><a href="https://ianlunn.github.io/Hover/" target="_blank">hover.css</a> - a collection of neat CSS :hover snippets!</li>
+
+		<h4>javascript</h4>
+		<li><a href="https://javascript.info/" target="_blank">javascript.info</a></li>
+		<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" target="_blank">javascriptkit</a></li>
+		<li><a href="https://github.com/atifjamal360/Books/blob/master/A-Smarter-Way-to-Learn-JavaScript-The-new-approach-that-uses-technology-to-cut-your-effort-in-half.pdf" target="_blank">a smarter way to learn JS (PDF book)</a></li>
+		<li><a href="https://www.freecodecamp.org" target="_blank">freecodecamp</a> - courses and projects for you to learn responsive web design, basic javascript, and much more!</li>
+		<li><a href="https://www.theodinproject.com/" target="_blank">the odin project</a></li>
 
 		<h3 id="sites">useful sites</h3>
 
