--- a/website/journal/credit.html
+++ b/website/journal/credit.html
@@ -12,14 +12,15 @@
 </head>
 
 <body>
-	<h1 style="margin: 20px 25px;">journal credits</h1>
-	<p><a href="https://pastebin.com/PiDgrv3J" target="_blank">music player</a> code is by <a href="https://adilene.net/" target="_blank">adilene.net</a></p>
-	<p>pixels by <a href="http://whimsical.heartette.net" target="_blank">whimsical</a></p>
-	<p>gif on right side from hit video game/visual novel <i>if found...</i> / <a href="https://store.steampowered.com/app/1041920/If_Found/" target="_blank">steam page</a></p>
-	<p>washi tape, blank bookmark from <a href="https://foollovers.com/" target="_blank">foollovers.com</a></p>
-	<p>calendar iframe from <a href="http://calendar-muryou.com/blog.html" target="_blank">calendar-muryou</a></p>
-	<p>pencil cursor from <a href="https://www.cursors-4u.com/" target="_blank">cursors-4u</a></p>
-	<p>JS code for statuses and microblog tabs from <a href="https://www.w3schools.com/howto/howto_js_tabs.asp" target="_blank">w3schools.com</a></p>
+	<div id="log">
+		<h1 style="margin: 20px 25px;">journal credits</h1>
+		<p>cute memo scans by <a href="https://www.flickr.com/photos/kawaiiscans/" target="_blank">kawaiiscans</a></p>
+		<p><a href="https://pastebin.com/PiDgrv3J" target="_blank">music player</a> code is by <a href="https://adilene.net/" target="_blank">adilene.net</a></p>
+		<p>blank bookmark from <a href="https://foollovers.com/" target="_blank">foollovers.com</a></p>
+		<p>calendar iframe from <a href="http://calendar-muryou.com/blog.html" target="_blank">calendar-muryou</a></p>
+		<p>pencil cursor from <a href="https://www.cursors-4u.com/" target="_blank">cursors-4u</a></p>
+		<p>draggable js code from <a href="https://stackoverflow.com/questions/14695933/draggable-div-with-classname" target="_blank">stackoverflow</a></p>
+	</div>
 </body>
 
 </html>
