--- a/website/home.html
+++ b/website/home.html
@@ -130,6 +130,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>01.mar.24 - <a href="/journal">journal</a> v3 out!</li>
 			<li>25.feb.24 - added <a href="/scrapbook/2024/index.html#feb">february</a> to 2024 scrapbook</li>
 			<li>24.feb.24 - created <a href="/music/listening-log/2024/winter.html">winter 2024 listening log</a> + new featured song &amp; album</li>
 			<li>17.feb.24 - new <a href="/journal">journal log</a>! also changed featured cat</li>
