--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -6,7 +6,7 @@
 	<!-- 
 coded with love by des!
 
-v3 of journal started on 25.feb.24.
+v3 of journal started on 25.feb.24./ finished on 01.mar.24
  -->
 
 	<meta charset="UTF-8">
