added more deco to journal

--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -16,7 +16,7 @@ v3 of journal started on 25.feb.24.
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="v3-body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="v3-index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
@@ -32,19 +32,17 @@ v3 of journal started on 25.feb.24.
 
 		<nav>
 			<h1>des' journal</h1>
-			<!--			<p>test. this is <b>bolded</b>. this is a <a href="/">link</a>. this is in <i>italics</i>. this is <mark>highlighted</mark>.</p>-->
 			<img src="/!g/deco/diary.gif">
 			<p>a place where i talk about what's going on in my life and about my site!</p>
+			<p><a href="credit.html" target="iframe_a">credit</a> for materials used</p>
 			<small class="sticky">all sticky notes are draggable!</small>
 			<details>
-				<summary>notes</summary>
+				<summary>journal content notes</summary>
 				<p>i try to be as coherent as possible in these entries. for whatever nonsense i have atm, feel free to check out my <a href="" class="outlink">microblog</a></p>
-				<p>i <b>try</b> to not treat this journal as a vent dump, or be overly negative. but i do be having bad times. anything of those topics will have <mark>content warnings</mark> at the start of the entry.</p>
+				<p>i don't want to treat this journal as a vent dump, or be overly negative. but i do be having bad times. anything of those topics will have <mark>content warnings</mark> at the start of the entry.</p>
 			</details>
 			<br>
 			<img src="/!g/deco/pencil1.gif">
-			<br>
-			<a href="credit.html" target="iframe_a">credit page</a>
 			<br>
 			<details open>
 				<summary>2024</summary>
@@ -80,7 +78,7 @@ v3 of journal started on 25.feb.24.
 			<!-- start sw-rss-feed code -->
 			<script type="text/javascript" src="status-cafe-feed.js"></script>
 			<script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
-			<span style="font-size:small;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></span>
+			<span style="font-size:small;"><a href="https://status.cafe/users/doqmeat" target="_blank">status.cafe</a> feed powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></span>
 		</div>
 	</aside>
 
@@ -123,6 +121,13 @@ v3 of journal started on 25.feb.24.
 					<div class="total-duration">0:00</div>
 				</div><audio id="music" src=""></audio>
 			</div>
+		</div>
+	</aside>
+
+	<aside id="memo4" class="memo draggable">
+		<div class="innermemo">
+			<h3 style="text-align: center;margin:3px;"><a href="https://doqmeat.blog.fc2.com/" title="nonsense and ramblings" target="_blank">des' microblog</a></h3>
+			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.blog.fc2.com%2F%3Fxml&showtitle=false&type=js"></script>
 		</div>
 	</aside>
 
