--- a/website/notebook/index.html
+++ b/website/notebook/index.html
@@ -154,6 +154,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 						↳ <a href="archive/homepage/index.html#v1" target="iframe_c">v1</a> ↳ <a href="archive/homepage/index.html#v2" target="iframe_c">v2</a> ↳ <a href="archive/homepage/index.html#v3" target="iframe_c">v3</a>
 					</ul>
 					<li><a href="archive/layouts/index.html" target="iframe_c">page layouts</a></li>
+					<li><a href="archive/updates.html" target="iframe_c">past updates</a></li>
 					<li><a href="archive/pages/index.html" target="iframe_c">archived pages</a></li>
 
 					<!-- 		paper left end div -->
