--- a/website/scrapbook/index.html
+++ b/website/scrapbook/index.html
@@ -33,7 +33,7 @@
 	<div id="home"><a title="go back to homepage" href="/home"><img src="/!g/deco/paper-planes.gif" alt="link to homepage"></a></div>
 
 	<footer>
-		<b>credit:</b> body bg by <a href="http://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>
+		<b>credit:</b><a href="/notebook/links/fonts.html">fonts</a> used: garden, newpenji, gaegu
 		<br>
 		<a href="#">top</a> / <a href="/home">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
