updated button wall

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -10,20 +10,8 @@
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 </head>
 
@@ -138,7 +126,7 @@
 			<a title="olivia" href="https://egoisthye.neocities.org/" target="_blank"><img src="!g/egoisthye.png"></a>
 			<a title="lav & val - love their resources links!" href="https://justfluffingaround.neocities.org/" target="_blank"><img src="!g/justfluffingaround.png"></a>
 			<a title="jamie - fun little personal sie" href="https://shinyexe.neocities.org/" target="_blank"><img src="!g/shinyexe.gif"></a>
-			<a title="pom - i cannot even express how much i love this site!!! the webmaster's fursona is so so so cute and the colors of the site are EVERYTHING. i visit this one frequently" href="https://pomelo.lol/" target="_blank"><img src="!g/pomelo.gif"></a>
+			<a title="pom - i cannot even express how much i love this site!!! the webmaster's fursona is so so so cute and the colors of the site are EVERYTHING. i visit this one frequently" href="https://pomelo.lol/" target="_blank">a<img src="!g/pomelo.gif"></a>
 			<a title="Becki - sweet personal site with an amazing curation of internet goodies such as pixels!" href="https://sakuradreams.neocities.org" target="_blank"><img src="!g/SakuraDreams.gif"></a>
 			<a title="scout - found this site through the vocaloid webring cus they put a siinamota song as one of their favs! i like their blogs" href="https://scootarooni.neocities.org/" target="_blank"><img src="!g/scootarooni.png"></a>
 			<a title="noah - LOVELYYY and very home-y ? site!!" href="https://scarecrowkid.net/" target="_blank"><img src="!g/scarecrowkid.gif"></a>
@@ -167,7 +155,6 @@
 			<a title="aaron" href="https://applesayce.neocities.org/" target="_blank"><img src="!g/applesayce.gif" alt="applesayce"></a>
 			<a title="mapplebear - a super sweet and cozy site, i especially love their logs about fashion!" href="https://maplebear.neocities.org/" target="_blank"><img src="!g/maplebear.gif" alt="maplebear"></a>
 			<a title="nork - i love the layouts a lot. the music page is super nice as well." href="https://nork2004.neocities.org" target="_blank"><img src="!g/nork2004.png" alt="nork2004"></a>
-			<a title="a0i - LOVELY layout designs" href="https://hatsu.neocities.org/" target="_blank"><img src="!g/hatsu.png" alt="hatsu"></a>
 			<a title="frills - cool and responsive site!" href="https://frills.dev/" target="_blank"><img src="!g/frills.png" alt="frills"></a>
 			<a title="cepheus - neat graphic designs and layouts" href="https://cepheus.neocities.org/" target="_blank"><img src="!g/cepheus.gif" alt="cepheus"></a>
 			<a title="wrender - cuteeee site with lots to see! i like how each page follows a color palette" href="https://wrender.neocities.org/" target="_blank"><img src="!g/wrender.gif" alt="wrender"></a>
@@ -187,6 +174,9 @@
 			<a title="audreywasadiver" href="https://audreywasadiver.neocities.org/" target="_blank"><img src="!g/audreywasadiver.gif" alt="audreywasadriver"></a>
 			<a title="myblace" href="https://myblace.one" target="_blank"><img src="!g/myblace.gif" alt="myblace"></a>
 			<a href="https://alphacentauri.neocities.org/" title="alphacentauri" target="_blank"><img src="!g/alphacentauri.gif" alt="alphacentauri"></a>
+			<a title="cloverbell - one of my fav websites ever omg" href="https://cloverbell.neocities.org/" target="_blank"><img src="https://cloverbell.neocities.org/n_n/cloverbell.gif"></a>
+			<a title="johndavis" href="https://johndavid.neocities.org/" target="_blank"><img src="!g/johndavid.webp"></a>
+			<a title="traumagotchi" href="https://traumagotchi.neocities.org" target="_blank"><img src="!g/traumagotchi.gif" alt="traumagotchi"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -213,7 +203,6 @@
 			<a href="https://nyafanatic.neocities.org" target="_blank"><img src="!g/nyafanatic.gif"></a>
 			<a href="https://noodledesk.net" target="_blank"><img src="!g/noodledesk.net.gif"></a>
 			<a href="https://cementgarden.neocities.org/"><img src="https://cementgarden.neocities.org/images/button/cementgarden7.gif"></a>
-			<a href="https://cloverbell.neocities.org/" target="_blank"><img src="https://cloverbell.neocities.org/n_n/cloverbell.gif"></a>
 			<a href="https://uncannyvalley.neocities.org/" target="_blank"><img src="https://uncannyvalley.neocities.org/uncanny.gif"></a>
 			<a href="https://wappydog.neocities.org" target="_blank"><img src="https://wappydog.neocities.org/button.gif"></a>
 			<a href="https://melokaji.neocities.org/"><img src="https://melokaji.neocities.org/images/melobutton.gif" alt="melokaji"></a>
@@ -352,6 +341,7 @@
 			<a href="https://deathbycats.neocities.org/" target="_blank"><img src="!g/deathbycats.png"></a>
 			<a title="cora - cute site!! i love the cats around this site" href="https://realitv.neocities.org" target="_blank"><img src="!g/realitv.gif"></a>
 			<a title="nyatchi - such a cute layout" href="https://nyatchi.neocities.org" target="_blank"><img src="!g/nyatchi.gif"></a>
+			<a title="a0i - LOVELY layout designs" href="https://hatsu.neocities.org/" target="_blank"><img src="!g/hatsu.png" alt="hatsu"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
